--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 asgiref==3.7.2
+decouple==0.0.7
 Django==4.2.6
 exceptiongroup==1.1.3
 factory-boy==3.3.0
@@ -10,6 +11,7 @@ pytest==7.4.3
 pytest-django==4.5.2
 python-dateutil==2.8.2
 python-decouple==3.8
+python-dotenv==1.0.0
 six==1.16.0
 sqlparse==0.4.4
 tomli==2.0.1
