--- a/.env.example
+++ b/.env.example
@@ -2,4 +2,4 @@
 SECRET_KEY = 'SHGDFGU8DFGYDF8UYGS0DFY0GG8UYDFS0YGDSFGY'
 
 # Example database url
-DATABASE_URL= 'sqlite:///db.sqlite3'
+DATABASE_URL= 'db.sqlite3'
