--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ pytest==7.4.3
 pytest-django==4.5.2
 python-dateutil==2.8.2
 python-decouple==3.8
+python-dotenv==1.0.0
 six==1.16.0
 sqlparse==0.4.4
 tomli==2.0.1
